# Movie-Crawler

./: CMakeLists.txt  README.md  Strategies.cpp  Strategies.h
Catcher/: BaseCatcher.cpp  BaseCatcher.h  Douban_by_TV.cpp  Douban_by_TV.h  Douban_by_TV.py  Douban_by_movies.cpp  Douban_by_movies.h  Douban_by_movies.py  Douban_by_people.cpp  Douban_by_people.h  Douban_by_people.py  Douban_by_people.txt  Douban_by_toplist.cpp  Douban_by_toplist.h  Douban_by_toplist.py  IMDB_by_TV.cpp  IMDB_by_TV.h  IMDB_by_TV.py  IMDB_by_movies.cpp  IMDB_by_movies.h  IMDB_by_movies.py  IMDB_by_people.cpp  IMDB_by_people.h  IMDB_by_people.py  IMDB_by_toplist.cpp  IMDB_by_toplist.h  IMDB_by_toplist.py  RottenTomatoes_by_TV.cpp  RottenTomatoes_by_TV.h  RottenTomatoes_by_TV.py  RottenTomatoes_by_movies.cpp  RottenTomatoes_by_movies.h  RottenTomatoes_by_movies.py  RottenTomatoes_by_people.cpp  RottenTomatoes_by_people.h  RottenTomatoes_by_people.py  RottenTomatoes_by_toplist.cpp  RottenTomatoes_by_toplist.h  RottenTomatoes_by_toplist.py
ObjRanking/: BaseObject.cpp  BaseObject.h  MovieObject.h  PersonObject.h  Ranking.cpp  Ranking.h  TVObject.h
